[gd_scene load_steps=14 format=2]

[ext_resource path="res://Sprites/Enemy/enemy5.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Enemy/enemy6.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemy/enemy3.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Enemy/enemy4.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Enemy/enemy2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Enemy/enemy1.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Enemy/Enemy.gd" type="Script" id=7]
[ext_resource path="res://Sprites/Enemy/LifeBar/bg.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Enemy/LifeBar/fill.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 34, 50 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30, 47 )

[sub_resource type="Animation" id=4]
resource_name = "damaged"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 7 )

[node name="Area2D" type="Area2D" parent="."]

[node name="HitBox" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
frame = 4
playing = true

[node name="HitBox" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 0 )
shape = SubResource( 3 )

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = -59.0
margin_top = -69.0
margin_right = 337.0
margin_bottom = -16.0
rect_scale = Vector2( 0.3, 0.4 )
value = 100.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 9 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/damaged = SubResource( 4 )

[node name="AtkCooldown" type="Timer" parent="."]

[node name="HurtCooldown" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="AtkCooldown" to="." method="_on_AtkCooldown_timeout"]
[connection signal="timeout" from="HurtCooldown" to="." method="_on_HurtCooldown_timeout"]
